# LiverSegmentation

./: CMakeLists.txt  LICENSE  README.md
LiverSegmentation/: CMakeLists.txt  LiverSegmentation.py
LiverSegmentationModule/: CMakeLists.txt
LiverSegmentationModule/LiverSegmentationModuleLib/: LiverSegmentationInference.py
LiverSegmentationModule/Resources/UI/: LiverSegmentationModule.ui
